# koinonia-db

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  network-map.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_search_vectors.py  002_fulltext_search.py  003_syllabus_tables.py
data/: schema-manifest.json
docs/adr/: 003-syllabus-service-extraction.md
docs/pitch/: index.html
scripts/: seed_all.py
seed/: community.json  curricula.json  load_seed.py  product_communities.json  reading_lists.json  sample_sessions.json  taxonomy.json
src/koinonia_db/: __init__.py  config.py  constants.py  data_export.py  engine.py  syllabus_service.py
src/koinonia_db/models/: __init__.py  base.py  community.py  reading.py  salon.py  syllabus.py
tests/: test_config.py  test_constants.py  test_data_export.py  test_engine.py  test_models.py  test_seed.py
