[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koinonia-db"
version = "0.5.0"
description = "Shared database models and migrations for ORGAN-VI Koinonia"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary,pool]>=3.1",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "aiosqlite>=0.20", "ruff>=0.4.0"]

[project.scripts]
koinonia-data-export = "koinonia_db.data_export:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99
